--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 
 <div class="login">
   <form class="custom-form" method="post">
-    <h1>Login</h1>
+    <h1 style="text-align: center;">Login</h1>
     <input
       type="email"
       [(ngModel)]="empresa.email"
