--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,5 +17,7 @@
       required="required"
     />
     <button type="submit" (click)="login()">Log in</button>
+    <br>
+  <a routerLink="/register" routerLinkActive="router-link-active" >¿Aún no tienes cuenta? Regístrate</a>
   </form>
 </div>
