--- a/src/app/navigationDrawer/navigationDrawer.component.html
+++ b/src/app/navigationDrawer/navigationDrawer.component.html
@@ -1,57 +1,46 @@
+<mat-toolbar class="barratop">
+  <mat-toolbar-row>
+    <button mat-icon-button>
+      <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+    </button>
+    <h1>Doors n' Corners</h1>
+    <span class="menu-spacer"></span>
+    <div>
+      <a class="a-custom" mat-button [routerLink]="'/accounts'"> Accounts </a>
+      <a mat-button [routerLink]="'/profile'"> Create Account </a>
+      <a mat-button [routerLink]="'/contacts'"> Contacts </a>
+      <a mat-button [routerLink]="'/create-contact'"> Create Contact </a>
+      <a mat-button [routerLink]="'/activities'"> Activities </a>
+      <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
+    </div>
+  </mat-toolbar-row>
 
-<div >
-  <mat-toolbar  color="primary">
-    <mat-toolbar-row>
-      <button (click)="cajon.toggle()" mat-icon-button>
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>
-        Doors n' Corners&nbsp;
-      </span>
-
-    </mat-toolbar-row>
-  </mat-toolbar>
-  <mat-sidenav-container fxFlexFill >
-    <mat-sidenav fxLayout="column" style="height: 100%;" #cajon mode="side" opened>
-      <mat-nav-list>
-        <a mat-list-item href='#'>
-          <mat-icon color="accent">add</mat-icon>
-          Agregar mascota
-        </a>
-        <a mat-list-item routerLink="./profile" routerLinkActive="router-link-active" >Mi perfil</a>
-        <a mat-list-item href='#'>
-          <mat-icon color="primary">pets</mat-icon>
-          Ver mascotas
-        </a>
-      </mat-nav-list>
-      <mat-accordion>
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Más
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-nav-list>
-            <a mat-list-item href='#'>
-              Acerca de
-            </a>
-            <a mat-list-item href='#'>
-              Ayuda
-            </a>
-          </mat-nav-list>
-        </mat-expansion-panel>
-      </mat-accordion>
-    </mat-sidenav>
-    <mat-sidenav-content fxFlexFill >
+  <mat-toolbar-row>
+    <span style="font-size: 12px"
+      >SimpleCRM helps you easily manage your contacts</span
+    >
+  </mat-toolbar-row>
+</mat-toolbar>
+<mat-sidenav-container style="background-color: darkgray;">
+  <mat-sidenav class="sidenav-custom" #sidenav>
+    <mat-nav-list>
+      <a mat-list-item class="a-custom" [routerLink]="['./home']">
+        <mat-icon class="mat-icon-custom" color="white">dashboard</mat-icon> Dashboard
+      </a>
+      <a mat-list-item class="a-custom" [routerLink]="['./profile']">
+        <mat-icon class="mat-icon-custom" color="white">person_pin</mat-icon> Mi perfil
+      </a>
+      <a mat-list-item class="a-custom" [routerLink]="['./home']">
+        <mat-icon class="mat-icon-custom" color="white">work</mat-icon>Ofertas de trabajo
+      </a>
+      <a style="color: red;" mat-list-item (click)="sidenav.toggle()" href="" mat-list-item
+        >Cerrar sesión</a
+      >
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div style="height: 88vh">
       <router-outlet></router-outlet>
-      ddddddddddddddddddddddddddddddddddddddddddddddddddddd
-      ddddddddddddddddddddddddddddddddddddddddddddddddddddd
-      ddddddddddddddddddddddddddddddddddddddddddddddddddddd
-      ddddddddddddddddddddddddddddddddddddddddddddddddddddd
-      ddddddddddddddddddddddddddddddddddddddddddddddddddddd
-      ddddddddddddddddddddddddddddddddddddddddddddddddddddd
-      ddddddddddddddddddddddddddddddddddddddddddddddddddddd
-      ddddddddddddddddddddddddddddddddddddddddddddddddddddd
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-</div>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
