Listado de posiciones
Finalizando listado de posiciones, falta posicionar datos en card y estilos.

--- a/src/app/navigationDrawer/navigationDrawer.component.html
+++ b/src/app/navigationDrawer/navigationDrawer.component.html
@@ -30,9 +30,10 @@
       <a mat-list-item class="a-custom" [routerLink]="['./profile']">
         <mat-icon class="mat-icon-custom" color="white">person_pin</mat-icon> Mi perfil
       </a>
-      <a mat-list-item class="a-custom" [routerLink]="['./home']">
-        <mat-icon class="mat-icon-custom" color="white">work</mat-icon>Ofertas de trabajo
+      <a mat-list-item class="a-custom" [routerLink]="['./offers']">
+        <mat-icon class="mat-icon-custom" color="white">work</mat-icon>Posiciones de trabajo
       </a>
+
       <a style="color: red;" mat-list-item (click)="sidenav.toggle()" href="" mat-list-item
         >Cerrar sesión</a
       >
