--- a/src/app/offers/offers.component.css
+++ b/src/app/offers/offers.component.css
@@ -1,12 +1,13 @@
 .example-card {
-    max-width: 400px;
+   max-width: 400px;
    margin: 15;
    text-align: justify;
    text-justify: inter-word;
-    
+   width: 300;
+   padding: 10;
+
   }
   .example-header-image {
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
   }
-  
