--- a/src/app/offers/offers.component.html
+++ b/src/app/offers/offers.component.html
@@ -1,20 +1,80 @@
 
-<div style="background-color: blue;margin: 0 auto;"> 
-  <mat-card  *ngFor="let pos of listapos" class="example-card">
+<button mat-button class="btn btn-primary" role="button" data-toggle="modal" data-bss-tooltip="" style="background: rgb(231,210,16);" id="CreatePos" (click)="openModal()" title="Crear Posicion" data-target="#crearPosicionModal">Crear Posición</button>
+
+<div class="row">
+  <div class="col-12">
+      <mat-grid-list cols="4" rowHeight="450px">
+          <mat-grid-tile colspan="1" rowspan="1" *ngFor="let pos of listapos">
+              <mat-card class="card m-3" style="background-color: black;height: 400px;width: 400px;">
+                  <mat-card-title>{{pos.nombre}} </mat-card-title>
+                  <mat-card-content>
+                      <table style="width:100%;">
+                          <tr>
+                              <th style="color: aliceblue;">Descripcion</th>
+                          </tr>
+                          <tr>
+                              <td>
+                                  {{pos.descripcion}}
+                              </td>
+                          </tr>
+                          <tr>
+                              <th style="color: aliceblue;"> Fecha de inicio:</th>
+                              <th style="color: aliceblue;"> Fecha de fin:</th>
+                            </tr>
+                            <tr>
+                            <td style="color: aliceblue;" type="date">{{pos.fechainicio}}</td>
+                            <td style="color: aliceblue;">{{pos.fechafin}}</td>
+                          </tr>
+                          <tr>
+                            <th style="color: aliceblue;"> Horario:</th>
+                            <th style="color: aliceblue;"> Remuneracion:</th>
+                          </tr>
+                          <tr>
+                          <td style="color: aliceblue;">{{pos.horario}}</td>
+                          <td style="color: aliceblue;">{{pos.remuneracion}}</td>
+                        </tr>
+                      </table>
+                  </mat-card-content>
+                  <mat-card-actions style="padding-bottom: 0;">
+                      <button mat-raised-button style="background-color: rgb(231,210,16); padding-top: 1px; margin-right: 15px;">Inscripciones</button>
+                      <button mat-raised-button style="background-color: rgb(231,210,16); padding-top: 1px; margin-right: 15px;">Modificar</button>
+                  </mat-card-actions>
+              </mat-card>
+          </mat-grid-tile>
+      </mat-grid-list>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <mat-grid-list>
+<mat-grid-tile>
+
+  <mat-card *ngFor="let pos of listapos" class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{pos.nombre}}</mat-card-title>
       <mat-card-subtitle></mat-card-subtitle>
     </mat-card-header>
-   
     <mat-card-content>
-      <p style="word-break: break-all;">
+      <p style="word-break: break-all;"> Descripción:
        {{pos.descripcion}}
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+      <button mat-button class="btn btn-primary" role="button" data-bss-tooltip="" style="background: rgb(231,210,16);" (click)="openModal()" title="Detalles de Posición">Detalles</button>
     </mat-card-actions>
   </mat-card>
-</div>
+</mat-grid-tile>
+</mat-grid-list> -->
+
+
