listado de alumnos inscritos por cada posicion
se ha implementado un listado de alumnos inscritos en cada posicion. Se ha eliminado una seccion de codigo inutil en la pagina del perfil. Se ha creado el modelo de alumno para recibir y representar correctamente los datos.

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -21,9 +21,9 @@
         <tr>
           <td class="text-center"><input [(ngModel)]="posicionDeTrabajo.nombre" id="inputNombre" name="nombre" type="text" /></td>
           <td class="text-center">
-            <input [(ngModel)]="posicionDeTrabajo.fechainicio" id="inputFechaInicio" name="fechainicio" type="date" />
+            <input [(ngModel)]="posicionDeTrabajo.fechaInicio" id="inputFechaInicio" name="fechainicio" type="date" />
           </td>
-          <td  class="text-center"><input [(ngModel)]="posicionDeTrabajo.fechafin" id="inputFechaFin" name="fechafin" type="date" /></td>
+          <td  class="text-center"><input [(ngModel)]="posicionDeTrabajo.fechaFin" id="inputFechaFin" name="fechafin" type="date" /></td>
         </tr>
         <tr>
           <td class="text-center">Familia profesional</td>
