--- a/src/app/offers/offers.component.css
+++ b/src/app/offers/offers.component.css
@@ -11,3 +11,30 @@
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
   }
+  .scrollmenu{
+    overflow-x: scroll;
+    white-space:nowrap;
+    display: flex;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(231,210,16); 
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background:rgb(153, 140, 17); 
+}  
