--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,38 @@
-
-<div class="login">
-  <form class="custom-form" method="post">
-    <h1 style="text-align: center;">Login</h1>
-    <input
-      type="email"
-      [(ngModel)]="empresa.email"
-      name="email"
-      placeholder="Email"
-      required="required"
-    />
-    <input
-      type="password"
-      [(ngModel)]="empresa.password"
-      name="password"
-      placeholder="Contraseña"
-      required="required"
-    />
-    <button type="submit" (click)="login()">Log in</button>
-    <br>
-  <a routerLink="/register" routerLinkActive="router-link-active" >¿Aún no tienes cuenta? Regístrate</a>
-  </form>
-</div>
+<body class="mainBG">
+  <div class="login" style="width: 100%; height: 100%">
+    <form class="custom-form" method="post">
+      <h1 style="text-align: center; color: aliceblue">Login</h1>
+      <input
+        type="email"
+        [(ngModel)]="empresa.email"
+        name="email"
+        placeholder="Email"
+        required="required"
+      />
+      <input
+        type="password"
+        [(ngModel)]="empresa.password"
+        name="password"
+        placeholder="Contraseña"
+        required="required"
+      />
+      <button type="submit" (click)="login()">Log in</button>
+      <br />
+      <a routerLink="/register" routerLinkActive="router-link-active"
+        >¿Aún no tienes cuenta? Regístrate</a
+      >
+    </form>
+    <footer
+      style="
+        position: fixed;
+        bottom: 0%;
+        width: 100%;
+        background-color: rgb(27, 27, 27);
+      "
+    >
+      <h4 style="text-align: center; color: aliceblue">
+        Doors n' Corners 2021-2022. Todos los derechos reservados.
+      </h4>
+    </footer>
+  </div>
+</body>
