Añadida dirección a la pagina del perfil

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,7 +10,7 @@
               alt=""
             />
             <div class="file btn btn-lg btn-primary">
-              Change Photo
+              Cambiar foto
               <input type="file" name="file" />
             </div>
           </div>
@@ -73,6 +73,14 @@
                 </div>
                 <div class="col-md-5">
                   <p style="color: aliceblue;" >{{ empresa.localidad }}</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-5">
+                  <label style="color: aliceblue;font-weight: bold;" >Dirección</label>
+                </div>
+                <div class="col-md-5">
+                  <p style="color: aliceblue;" >{{ empresa.direccion }}</p>
                 </div>
               </div>
             </div>
