--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -37,12 +37,12 @@
           </div>
         </div>
         <div class="col-md-2">
-          <input style="background-color: rgb(231,210,16);color: aliceblue;"
+          <button style="background-color: rgb(231,210,16);color: aliceblue;"
             type="submit"
+            (click)="openModalUpdate(empresa)"
             class="profile-edit-btn"
-            name="btnAddMore"
-            value="Editar Perfil"
-          />
+            name="editarPerfil"
+          > Editar Perfil</button>
         </div>
       </div>
       <div class="row">
