--- a/src/app/offers/offers.component.html
+++ b/src/app/offers/offers.component.html
@@ -128,6 +128,7 @@
                         </mat-form-field>
                       </td>
                     </tr>
+                    <tr><button (click)="openModalContacto(pos,a.alumno)" mat-button style="background-color:rgb(231, 210, 16);border-radius: 20;border-color: black;">Contactar</button></tr>
                   </table>
                 </mat-card-content>
               </mat-card>
