--- a/src/app/navigationDrawer/navigationDrawer.component.html
+++ b/src/app/navigationDrawer/navigationDrawer.component.html
@@ -26,7 +26,9 @@
       <a mat-list-item class="a-custom" [routerLink]="['./offers']">
         <mat-icon class="mat-icon-custom" color="white">work</mat-icon>Posiciones de trabajo
       </a>
-
+      <a mat-list-item class="a-custom" [routerLink]="['./premium']">
+        <mat-icon class="mat-icon-custom" color="white">contacts</mat-icon>Alumnos-Premium
+      </a>
       <a style="color: red;" mat-list-item (click)="sidenav.toggle()" href="" mat-list-item
         >Cerrar sesión</a
       >
